--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.0.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,7 +16,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.15",
     "@types/redux": "^3.6.0",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "5.0.0-beta1",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "query-string": "^6.13.8",
@@ -27,14 +28,16 @@
     "redux-observable": "^1.2.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.6.3",
+    "source-map-explorer": "^2.5.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build ",
+    "test": "craco test",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "serve": "serve -s build -l 4000"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +58,11 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
+    "chalk": "^4.1.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "redux-devtools-extension": "^2.13.8",
+    "webpack": "4.44.2",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.4.0"
   }
 }
