--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.0.0",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,20 +13,24 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
     "bootstrap": "5.0.0-beta1",
+    "bootstrap-icons": "^1.3.0",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
     "reselect": "^4.0.0",
     "rxjs": "^6.6.3",
     "source-map-explorer": "^2.5.2",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
